[gd_scene load_steps=17 format=3 uid="uid://q2bcchnguvfg"]

[ext_resource type="Script" path="res://scenes/objects/players/weapons/copy_robot/screw_crusher.gd" id="1_arag5"]
[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="2_xc3ul"]
[ext_resource type="Texture2D" uid="uid://dypdii7eevtlu" path="res://sprites/players/weapons/Crusher.png" id="3_6dush"]
[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/players/copy_robot/weapons/BusterSmall.png" id="3_tksod"]
[ext_resource type="AudioStream" uid="uid://dcvhxvuushcu4" path="res://sounds/chargeshot.wav" id="4_ig54h"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="5_21833"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://sounds/tink.wav" id="6_ox70o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fajo5"]
shader = ExtResource("2_xc3ul")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ttsuh"]
atlas = ExtResource("3_6dush")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fk57"]
atlas = ExtResource("3_6dush")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afqjd"]
atlas = ExtResource("3_6dush")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("3_tksod")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("3_tksod")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("3_tksod")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttsuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fk57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afqjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fk57")
}],
"loop": true,
"name": &"Move",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fvlc"]
size = Vector2(14, 14)

[node name="ScrewCrusher" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_arag5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_fajo5")
position = Vector2(-0.25, 0)
scale = Vector2(1.02381, 1)
sprite_frames = SubResource("SpriteFrames_tmmfq")
animation = &"Move"
autoplay = "Move"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.19209e-07, 4.17233e-07)
scale = Vector2(3, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0fvlc")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ig54h")
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_21833")
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ox70o")
bus = &"SFX"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
